# aa-watcher-input

./: Makefile  aa-watcher-input.spec  pyproject.toml
src/aw_watcher_input/: __main__.py  main.py
