[tool.poetry]
name = "aa-watcher-input"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
packages = [
    { include = "aw_watcher_input", from = "src" }
]

[tool.poetry.scripts]
aa-watcher-input = "aw_watcher_input.main:main"

[tool.poetry.dependencies]
python = "^3.8"
aw-client = "^0.5.14"
aa-watcher-afk = {git = "https://github.com/saisai/aa-watcher-afk.git"}

[tool.poetry.dev-dependencies]
pyinstaller = { version = "^6.6", python = "^3.8,<3.14" }
mypy = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
